Mit Colab erstellt

--- a/Semesterarbeit_BINA_final_(draft).ipynb
+++ b/Semesterarbeit_BINA_final_(draft).ipynb
@@ -3796,10 +3796,99 @@
         "- Erneuerbare Energieträger weiter ausbauen und fördern\n",
         "- Fossile und importierte Energieträger weiter diversifizieren und bestmöglich reduzieren\n",
         "- Dekarbonisierung aller Sektoren weiter vorantreiben\n",
-        "- Modernere und"
+        "- Modernere (effizientere) Technologien fördern und Rahmenbedingungen verbessern\n",
+        "- Lösungen zur besseren Speicherung weiter erforschen und unterstützen"
       ],
       "metadata": {
         "id": "TS4RFsp8w1p1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Glossar"
+      ],
+      "metadata": {
+        "id": "op6VhrB2yUVb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Quellen: Dokumente BFE rund um Gesamtenergiestatistik und Teilstatistiken, primär in Anlehnung PDF Gesamtenergiestatistik 2023 (https://www.bfe.admin.ch/bfe/de/home/versorgung/statistik-und-geodaten/energiestatistiken/gesamtenergiestatistik.exturl.html/aHR0cHM6Ly9wdWJkYi5iZmUuYWRtaW4uY2gvZGUvcHVibGljYX/Rpb24vZG93bmxvYWQvMTE3OTY=.html) oder https://www.e-control.at/documents/1785851/1811582/Statistikbrosch%C3%BCre_deutsch_FINAL.pdf/76a285c4-10f4-1a8e-b618-03265b2d6a15?t=1601286846708 für die Erklärung der statistischen Differenz.\n",
+        "\n",
+        "Energieträger\n",
+        "\n",
+        "Elektrizität:  \n",
+        "\n",
+        "Sekundärenergieträger, umgewandelt aus Primärenergieträgern wie Erdöl (Rohöl), Erdgas, Kohle, Torf, Natururan bzw. Kernenergie, Holz und andere Biomasse, Wind-, Gezeiten-, Wellen-, Meeresströmungs- und Wasserkraft, Sonnenstrahlung, Erd- und Umgebungswärme sowie Müll und Industrieabfälle. Manchmal wird mehr als ein Umwandlungsprozess durchlaufen, z.B. Stromerzeugung aus bereits raffinierten Produkten wie Benzin/Diesel.\n",
+        "\n",
+        "Erdölprodukte:\n",
+        "\n",
+        "Sekundärenergieträger wie Heizöle (leicht bis schwer), Benzin, Diesel(öl), Flugtreibstoffe, Petrolkoks und übrige energetische Erdölprodukte (Flüssiggase (z.B. Propan/Butan), Leuchtpetrol, White Spirit («Testbenzin», dient als Löse- und Verdünnungsmittel in Produkten wie Klebstoffen und Anstrichen wie z. B. Holzschutzmitteln, Lacken sowie Dispersions- und Ölfarben.), und VGO (Vakuumgasöl, Zwischenprodukt des Raffinationsprozesses von Erdöl)).\n",
+        "\n",
+        "Fernwärme:  \n",
+        "\n",
+        "Sekundärenergieträger, meint Wärme, die an Dritte verkauft wird und für deren Haupttransport und Verteilung öffentlicher Boden beansprucht wird. Kann auch bei Kernkraftwerken, Müllverbrennungsanlagen, etc. produziert werden.\n",
+        "\n",
+        "Gas:  \n",
+        "\n",
+        "Umfasst Inlandproduktion (vorübergehend zwischen 1985 und 1994 in Finsterwald) und Import von Erdgas, Erzeugung aus Kohle und Erdölprodukten, Biogaseinspeisung ins Erdgasnetz. Der Endverbrauch berechnet sich nach Abzügen der teilweisen Umwandlung in Elektrizität und Fernwärme sowie den Eigenverbrauch der Gaswerke und Netzverluste.\n",
+        "\n",
+        "Holzenergie:\n",
+        "\n",
+        "Wird über 20 verschiedene Verbrennungsanlagentypen erhoben. Diese können grob in Einzelraumheizungen, Gebäudeheizungen oder automatische Feuerungen eingeteilt werden.\n",
+        "\n",
+        "Kernbrennstoffe:\n",
+        "\n",
+        "Primärenergieträger wie Natururan, zur Elektrizitätserzeugung in Kernkraftwerken genutzt.\n",
+        "\n",
+        "Kohle:\n",
+        "\n",
+        "Gemeint sind Kohlenarten wie Steinkohle (sowie Steinkohlenbriketts oder -koks) oder Braunkohle. Die Holzkohle ist hier nicht gemeint.\n",
+        "\n",
+        "Müll und Industrieabfälle:\n",
+        "\n",
+        "Primärenergieträger, gemeint ist die energetische Nutzung von Abwärme, die bei der Verbrennung von Müll (Kehricht in Kehrichtverbrennungsanlagen) und Industrieabfällen (z.B. Klärschlämme oder Abfälle aus der Papierindustrie).  \n",
+        "\n",
+        "Rohöl:\n",
+        "\n",
+        "Primärenergieträger, gemeint ist Erdöl. In den Raffinerien werden daraus Sekundärenergieträger wie etwa Erdölprodukte.\n",
+        "\n",
+        "Übrige erneuerbare Energien:\n",
+        "\n",
+        "Zusammenfassung von Biogas (aus Mist und Gülle der Landwirtschaft, vergorenen Haushaltabfällen, Abfalldeponien, Kläranlagen und Industrieabwässern gewonnen), biogenen Treibstoffen (Biodiesel, Bioethanol und pflanzliche/tierische Öle/Altöle), Sonne (Elektrizität mittels Photovoltaik und Warmwasser mittels Sonnenkollektoren), Wind (Leistung und Umweltwärme (mittels Wärmepumpen aus Luft, Oberflächenwasser, Grundwasser oder Erdwärme)\n",
+        "\n",
+        "Wasserkraft:\n",
+        "\n",
+        "Primärenergieträger, gemeint ist die in den Wasserkraftwerken erzeugten Elektrizitätsmenge z.B. in Lauf-, Speicher- oder Pumpspeicherwerken.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Sektoren  \n",
+        "\n",
+        "Verkehr:  \n",
+        "\n",
+        "Umfasst den gesamten privaten und öffentlichen Verkehr (Strasse, Schiene, Wasser und Luft) ohne weitere Untergliederung nach Sektoren (Industrie, Dienstleistungen, etc.)\n",
+        "\n",
+        "Haushalte:  \n",
+        "\n",
+        "In der Regel privater Verbrauch von Energie für Raumwärme, Warmwasserbereitung, Beleuchtung, etc.\n",
+        "\n",
+        "Industrie:\n",
+        "\n",
+        "Umfasst auch das verarbeitende Gewerbe. Folgt seit 1999 einer repräsentativen Stichprobe von tausenden Arbeitsstätten anhand der Wirtschaftssystematik NOGA, welche für einige Energieträger entsprechend hochgerechnet wird. Zuvor durch einen Energiekonsumentenverband erhoben.  \n",
+        "\n",
+        "Dienstleitungen:\n",
+        "\n",
+        "Siehe Angaben Industrie zur Erhebung nach der Wirtschaftssystematik NOGA.  \n",
+        "\n",
+        "Differenz + Landwirtschaft:  \n",
+        "\n",
+        "Statistische Differenz meint die Differenz zwischen der gemessenen Abgabe an Endverbraucher und den Einzelmeldungen je Endkundenkategorie.  "
+      ],
+      "metadata": {
+        "id": "fRt1d9DNyaEX"
       }
     }
   ]
