Mit Colab erstellt

--- a/Semesterarbeit_BINA_final_(draft).ipynb
+++ b/Semesterarbeit_BINA_final_(draft).ipynb
@@ -190,7 +190,7 @@
         "id": "NuGLExRNMUng",
         "outputId": "c4327712-75f3-4443-b805-efe2adab7eaf"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +294,7 @@
         "id": "HVXylkjm-1Bd",
         "outputId": "1cafbd7d-98ec-4db9-b714-9ad227523196"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -933,7 +933,7 @@
         "id": "BSsEQ16iAH40",
         "outputId": "057c5169-5f81-4dbc-ed12-117e750f5a51"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -990,23 +990,11 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Je Panel ist unterhalb eine kurze Erklärung vorhanden."
+      ],
       "metadata": {
-        "id": "F1FN6yGpDsmY"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "HuyN7WcyEMbg"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "PAYy_NT2-GC2"
+        "id": "zwOyRUNS4exy"
       }
     },
     {
@@ -1134,7 +1122,7 @@
           "height": 623
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
