Mit Colab erstellt

--- a/Semesterarbeit_BINA_final_(draft).ipynb
+++ b/Semesterarbeit_BINA_final_(draft).ipynb
@@ -1059,7 +1059,7 @@
         "fig1 = add_annotations(fig1, yscale=120)\n",
         "\n",
         "desc1 = \"\"\"\n",
-        "**Bruttoverbrauch importierter Energieträger (1980–2023)**\n",
+        "** Bruttoverbrauch importierter Energieträger (1980–2023) **\n",
         "\n",
         "Die Zeitreihe zeigt deutliche strukturelle Verschiebungen im Energieimportmix der Schweiz. Während Erdölprodukte historisch dominiert haben, ist ihr Verbrauch seit Mitte der 2000er rückläufig. Bis etwa 2010 war der Verbrauch von Kernbrennstoffen relativ stabil, bevor infolge der Nuklearkatastrophe von Fukushima der Atomausstieg eingeleitet wurde. Der Gasverbrauch weist eine moderate Volatilität auf, mit einem Anstieg nach 2015. Kohle wurde praktisch eliminiert. Elektrizität und übrige erneuerbare Energien spielen mengenmässig eine untergeordnete Rolle, gewinnen jedoch strategisch an Bedeutung. Externe Ereignisse wie die Tschernobyl-Katastrophe, Marktliberalisierungen sowie geopolitische Krisen (Ukraine-Krieg, Gas-Krise) sind in den Daten nachvollziehbar erkennbar.\n",
         "\"\"\"\n",
@@ -1076,7 +1076,7 @@
         "fig2 = add_annotations(fig2, yscale=100)\n",
         "\n",
         "desc2 = \"\"\"\n",
-        "**Relative Marktanteile importierter Energieträger (1980–2023**\n",
+        "** Relative Marktanteile importierter Energieträger (1980–2023) **\n",
         "\n",
         "Diese Visualisierung legt den Fokus auf die prozentuale Zusammensetzung der Energieimporte. Erdölprodukte bleiben der dominierende Energieträger, verzeichnen jedoch seit 2005 einen kontinuierlichen Rückgang der Marktanteile. Ab 2011 sinkt der relative Anteil von Kernbrennstoffen, während Gas leicht zulegt. Der vollständige Rückgang von Kohle und die marginale Rolle erneuerbarer Energieimporte markieren den Übergang hin zu einem diversifizierteren, aber weiterhin fossildominierten Energiemix. Politische Entscheidungen, wie die Energiestrategie 2050, haben spürbare Auswirkungen auf die Importstruktur.\n",
         "\"\"\"\n",
@@ -1096,7 +1096,7 @@
         "fig3.update_layout(yaxis_range=[0, 100])\n",
         "\n",
         "desc3 = \"\"\"\n",
-        "**Importabhängigkeit beim Energieverbrauch (1980–2023)**\n",
+        "** Importabhängigkeit beim Energieverbrauch (1980–2023) **\n",
         "\n",
         "Trotz politischer Anstrengungen zur Förderung der inländischen Energieproduktion bleibt die Importabhängigkeit hoch. Der Importanteil liegt seit über vier Jahrzehnten konstant bei rund 80 %, wobei in den letzten Jahren ein leichter Rückgang auf ca. 75 % zu verzeichnen war. Die Inlandproduktion konnte ihren Anteil nur marginal steigern, was die strategische Verwundbarkeit der Schweiz in energiepolitischer Hinsicht unterstreicht. Für das Energiemanagement und die Versorgungssicherheit ergibt sich daraus ein klarer Handlungsbedarf.\"\"\"\n",
         "\n",
