Mit Colab erstellt

--- a/Semesterarbeit_BINA_final_(draft).ipynb
+++ b/Semesterarbeit_BINA_final_(draft).ipynb
@@ -48,9 +48,9 @@
       "source": [
         "Die Energiestrategie der Schweiz stützte lange auf die Säulen Energieeffizienz, erneuerbare Energien, Ersatz und Neubau von Grosskraftwerken zur Stromproduktion (dazu gehörten früher auch noch die Kernkraftwerke) und die Energieaussenpolitik ab. Als sich das internationale Energieumfeld stark verändert hatte und 2011 die Reaktorkatastrophe von Fukushima geschah, erarbeitet der Bundesrat die Energiestrategie 2050, um diesen neuen Herausforderungen zu begegnen. Bestehende Kernkraftwerke werden nur noch so lange weiterbetrieben, wie sie sicher sind. Die Verpflichtungen, welche die Schweiz im Rahmen des Pariser Klimaabkommens einging (Stichwort «Netto-Null-Emissionsziel») erhöhen den Druck, die Energiestrategie 2050 erfolgreich umzusetzen.\n",
         "\n",
-        "Für diese Fallstudie begibt sich unsere Gruppe in die Rollen von Mitarbeitenden des Bundesamtes für Energie BFE. Wir sind in der Abteilung „Betriebswirtschaft und Organisation“ angestellt. In diesem Bereich wird etwa auch ein „Kompetenzzentrum für Geoinformation, Open Government Data und Digitalisierung im Energiesektor“ betrieben. Unsere Abteilung erarbeitet Grundlagen, neue Massnahmen und dazu passende Instrumente. Wir orientieren uns in dieser Fallstudie an einer Guideline der Chartered Professional Accountants Canada, kurz CPA. Anhand von insgesamt 5 Schritten sollen fundierte und datengestützte Entscheidungen vorbereitet und ermöglicht werden. Im Folgenden möchten wir unsere Überlegungen zu diesen Schritten kurz darlegen.\n",
+        "Für diese Fallstudie begibt sich unsere Gruppe in die Rollen von Mitarbeitenden des Bundesamtes für Energie BFE. Wir sind in der Abteilung „Betriebswirtschaft und Organisation“ angestellt. In diesem Bereich wird etwa auch ein „Kompetenzzentrum für Geoinformation, Open Government Data und Digitalisierung im Energiesektor“ betrieben. Unsere Abteilung erarbeitet Grundlagen, neue Massnahmen und dazu passende Instrumente. Wir orientieren uns in dieser Fallstudie an einer Guideline der Chartered Professional Accountants Canada, kurz CPA. Anhand von insgesamt 5 Schritten sollen fundierte und datengestützte Entscheidungen vorbereitet und ermöglicht werden. Im Folgenden möchten wir unsere Überlegungen zu den ersten vier Schritten kurz darlegen. Die fünfte Phase befasst sich mit den schlussendlich aus den Daten getroffenen Entscheidungen und ist nicht Teil dieser Fallstudie.\n",
         "\n",
-        "In einem Gesamtfazit am Ende der Arbeit blicken wir noch einmal kurz auf die vorstehenden Erklärungen und Ziele zurück und stellen in einem Glossar noch Informationen aus weiteren Dokumenten des BFE zum Verständnis der Visualisierungen bereit. **(Nach Bedarf erweitern wegen Quellen)**"
+        "In einem Gesamtfazit am Ende der Arbeit blicken wir noch einmal kurz auf die vorstehenden Erklärungen und Ziele zurück und stellen in einem Glossar noch Informationen aus weiteren Dokumenten des BFE zum Verständnis der Visualisierungen bereit."
       ],
       "metadata": {
         "id": "XnwGnXmn6L9a"
@@ -63,13 +63,6 @@
       ],
       "metadata": {
         "id": "fy5dxaS1DFRm"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "x8pkf0-mFTW2"
       }
     },
     {
@@ -144,7 +137,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Der vierte und letzte Schritt unserer Arbeit befasst sich mit der Präsentation der gewonnenen Informationen. Die fünfte Phase befasst sich mit den schlussendlich aus den Daten getroffenen Entscheidungen und ist nicht Teil dieser Fallstudie. In dieser nun vierten Phase ist es wichtig, sich die Zielgruppen und ihre Wünsche nochmals zu veranschaulichen. Einerseits erarbeiten wir die vorliegende Fallstudie für unseren Vorgesetzten, andererseits ist es das Ziel, einem breiteren Adressatenkreis aus Politik, Wirtschaft und indirekt über diese Akteure der interessierten Öffentlichkeit verständliche und interaktive Einblicke in vergangene und aktuelle Daten unserer Energiewirtschaft bereitzustellen. Wir kommen zu dem Schluss, dass eine jährliche Aktualisierung der erarbeiteten Visualisierungen am meisten Sinn ergibt. Dies entspricht dem Aktualisierungsrhythmus der gewählten Daten und ermöglicht die aussagekräftigsten Ergebnisse. Die Visualisierungen, welche im Rahmen dieser Arbeit vorgestellt werden, ermöglichen auch ausserhalb dieser jährlichen Aktualisierungen geeignete Anpassungsmöglichkeiten. Je nach effektiver Zielgruppe können ohne grossen Aufwand Änderungen in der Darstellungsform (Graphen), in der farblichen und adressatengerechten Hervorhebung einzelner Werte oder Zahlenreihen oder im gewählten Kommunikationskanal umgesetzt werden."
+        "Der vierte und letzte Schritt unserer Arbeit befasst sich mit der Präsentation der gewonnenen Informationen. In dieser Phase ist es wichtig, sich die Zielgruppen und ihre Wünsche nochmals zu veranschaulichen. Einerseits erarbeiten wir die vorliegende Fallstudie für unseren Vorgesetzten, andererseits ist es das Ziel, einem breiteren Adressatenkreis aus Politik, Wirtschaft und indirekt über diese Akteure der interessierten Öffentlichkeit verständliche und interaktive Einblicke in vergangene und aktuelle Daten unserer Energiewirtschaft bereitzustellen. Wir kommen zu dem Schluss, dass eine jährliche Aktualisierung der erarbeiteten Visualisierungen am meisten Sinn ergibt. Dies entspricht dem Aktualisierungsrhythmus der gewählten Daten und ermöglicht die aussagekräftigsten Ergebnisse. Die Visualisierungen, welche im Rahmen dieser Arbeit vorgestellt werden, ermöglichen auch ausserhalb dieser jährlichen Aktualisierungen geeignete Anpassungsmöglichkeiten. Je nach effektiver Zielgruppe können ohne grossen Aufwand Änderungen in der Darstellungsform (Graphen), in der farblichen und adressatengerechten Hervorhebung einzelner Werte oder Zahlenreihen oder im gewählten Kommunikationskanal umgesetzt werden."
       ],
       "metadata": {
         "id": "GC2-X3rsH8Dn"
@@ -162,14 +155,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Erwähnen warum wir was installiert haben.\n",
-        "- xlrd installiert für ...\n",
-        "- datensatz im Github abgelegt für einfachen Import bei Ausführung\n",
-        "- panel installiert für darstellung\n",
-        "- jupyter_bokeh installiert für\n",
-        "\n",
-        "\n",
-        "das alles importiert für die späteren visualisierungen etc. und alle gesammelt importiert für übersichtlichkeit in der dokumentstruktur."
+        "Zuerst importieren wir die folgenden Komponente:\n",
+        "- xlrd wird für das Einlesen von alten Excel-Dateien verwendet\n",
+        "- Datensatz wurde im Github abgelegt für einen einfachen Import bei Ausführung und für die einfachere Zusammenarbeit\n",
+        "- panel wird für die Darstellungen installiert\n",
+        "- jupyter_bokeh wurde installiert für die interaktiven Darstellungen\n"
       ],
       "metadata": {
         "id": "mL4SoHRkGP7r"
@@ -190,7 +180,7 @@
         "id": "NuGLExRNMUng",
         "outputId": "65ac2523-3411-4573-9d05-3e0206739d03"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,17 +227,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Für die weiteren Programmierungen werden die folgenden Komponente importiert:\n",
+        "- pandas wird genutzt für die Datenanalyse und Datenmanipulation\n",
+        "- numpy ist fundamental für die Berechnung von Werten\n",
+        "- plotly wird für die interaktiven Darstellungen verwendet\n",
+        "- time wird genutzt, damit ein Bar-Chart-Race erstellt werden kann\n",
+        "- panel wird für unsere Visualisierungen genutzt\n",
+        "- Damit Warnmeldungen ausgeblendet werden, wurde noch BokehUserWarning importiert"
+      ],
+      "metadata": {
+        "id": "hXIcliLYe-4c"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "#import matplotlib.pyplot as plt\n",
-        "#import seaborn as sns\n",
         "import plotly.express as px\n",
         "import plotly.graph_objects as go\n",
-        "#import ipywidgets as widgets\n",
         "import time\n",
-        "from IPython.display import display, clear_output\n",
+        "#from IPython.display import display, clear_output\n",
         "import panel as pn\n",
         "pn.extension('plotly',sizing_mode=\"stretch_width\")\n",
         "\n",
@@ -264,7 +266,7 @@
         "id": "HVXylkjm-1Bd",
         "outputId": "c4d67fb9-ed3e-401e-c220-3c5a08708a97"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -903,7 +905,7 @@
         "id": "BSsEQ16iAH40",
         "outputId": "9b9a14a4-f767-4dcd-c516-138fe50023af"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -931,10 +933,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Einleitende Sätze die beschreiben wie der folgende Code generell aufgebaut wurde und wie die Grafen zu bedienen sind (ausblenden, panels, bereiche zoomen, etc.)\n",
-        "\n",
-        "**Bsp.:**\n",
-        "Die folgende Darstellung wurde in verschiedene Panel-Tabs gegliedert, damit man schnell Informationen einsehen und vergleichen kann. Auch bei diesen Panels kann mit dem Mauszeiger genaue Informationen ausgelesen werden. Möchte man nur einzelne Kategorien miteinander vergleichen, z.B. Industrie und Dienstleistung, kann man die anderen Kategorien in der Legende anklicken und dann werden diese Daten nicht mehr angezeigt. Mit einem erneuten Klick auf die ausgeblendete Kategorie, werden die Daten wieder ersichtlich. Man kann auch einen bestimmten Bereich genauer ansehen, indem man mit gehaltenem linken Mausklick eine Fläche definiert. Will man wieder die vollständige Ansicht, kann man mittels doppelklick in die initiale Darstellung zurückkehren."
+        "In den folgenden Analysen werden Darstellungen in verschiedenen Panel-Tabs gegliedert, damit man schnell Informationen einsehen und vergleichen kann. Bei diesen Panels kann mit dem Mauszeiger genaue Informationen ausgelesen werden. Möchte man nur einzelne Kategorien miteinander vergleichen, z.B. Industrie und Dienstleistung, kann man die anderen Kategorien in der Legende anklicken und dann werden diese Daten nicht mehr angezeigt. Mit einem erneuten Klick auf die ausgeblendete Kategorie, werden die Daten wieder ersichtlich. Man kann auch einen bestimmten Bereich genauer ansehen, indem man mit gehaltenem linken Mausklick eine Fläche definiert. Will man wieder die vollständige Ansicht, kann man mittels doppelklick in die initiale Darstellung zurückkehren."
       ],
       "metadata": {
         "id": "i-B-GpHzSdID"
@@ -1092,7 +1091,7 @@
           "height": 640
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2454,7 +2453,7 @@
       "metadata": {
         "id": "XImI21FBEoiw"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2463,9 +2462,7 @@
         "#### Einführung in die folgende Grafik\n",
         "\n",
         "Die nachfolgende Grafik veranschaulicht die Entwicklung der verbrauchten Mengen an fossilen Energieträgern über die Zeit. Die Sortierung der Kategorien erfolgt dabei anhand des Verbrauchs.\n",
-        "Es besteht die Möglichkeit, die exakten Verbräuche in TJ einzusehen. Zu diesem Zweck kann der Mauszeiger über dem jeweiligen Balken positioniert werden. Darüber hinaus besteht die Möglichkeit, den Regler auf ein spezifisches Jahr zu verschieben, woraufhin die automatische Darstellung pausiert.\n",
-        "\n",
-        "Statistische Differenz ist..."
+        "Es besteht die Möglichkeit, die exakten Verbräuche in TJ einzusehen. Zu diesem Zweck kann der Mauszeiger über dem jeweiligen Balken positioniert werden. Darüber hinaus besteht die Möglichkeit, den Regler auf ein spezifisches Jahr zu verschieben, woraufhin die automatische Darstellung pausiert."
       ],
       "metadata": {
         "id": "YNkw6ePuCaSI"
@@ -2560,7 +2557,7 @@
         "id": "E2LdUOgbCbmj",
         "outputId": "e92c08be-ec25-45fb-a99d-2da4be0f5b2e"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2790,7 +2787,7 @@
           "height": 580
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3554,7 +3551,7 @@
         },
         "outputId": "f78200b8-18c0-4da8-e7cf-fd71a6043d0a"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3665,7 +3662,7 @@
       "metadata": {
         "id": "56_YE83QHUW1"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3695,7 +3692,7 @@
       "metadata": {
         "id": "xTKh9JK-_uHX"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3734,7 +3731,7 @@
       "metadata": {
         "id": "HpDzAQsO_w4S"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3768,7 +3765,7 @@
       "metadata": {
         "id": "PD2_E4Cc_lqM"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3804,7 +3801,7 @@
       "metadata": {
         "id": "zCYSXnsQ_on5"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3843,7 +3840,7 @@
       "metadata": {
         "id": "UJUv8PsK_rX6"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3897,7 +3894,7 @@
       "metadata": {
         "id": "SsmcH-bf_zkG"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3961,7 +3958,7 @@
         "id": "waAOrJC5_2Jh",
         "outputId": "0d5f7577-8912-488f-ef0a-4192817c9240"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
